updated config for running on ws3

--- a/spark_properties_ws1.conf
+++ b/spark_properties_ws1.conf
@@ -17,8 +17,16 @@ spark.core.connection.ack.wait.timeout=600s
 ############################
 spark.driver.maxResultSize=0
 spark.python.worker.memory=3g
-spark.driver.memory=240g
-spark.executor.memory=960g
 spark.rpc.message.maxSize=2046
+
+## might be a good idea for exector.memory+driver.memory not to exceed total memory
+## total should be less than the amount available
+## ws1: 1006 GB  spark.driver.memory=120g spark.executor.memory=850g
+## ws3: 1007 GB
+spark.driver.memory=120g
+spark.executor.memory=850g
+
 ## assume 10 tasks/core
-spark.default.parallelism=960
+## ws1: 96 cores: 960
+## ws3: 256 cores: 2560
+spark.default.parallelism=2560
