updated spark_properties_ws1.conf so that we might run pipeline on ws3

--- a/spark_properties_ws1.conf
+++ b/spark_properties_ws1.conf
@@ -23,10 +23,19 @@ spark.rpc.message.maxSize=2046
 ## total should be less than the amount available
 ## ws1: 1006 GB  spark.driver.memory=120g spark.executor.memory=850g
 ## ws3: 1007 GB
-spark.driver.memory=120g
-spark.executor.memory=850g
+# spark.driver.memory=120g
+# spark.executor.memory=850g
 
 ## assume 10 tasks/core
 ## ws1: 96 cores: 960
 ## ws3: 256 cores: 2560
-spark.default.parallelism=2560
+# spark.default.parallelism=960
+
+## Following article: https://aws.amazon.com/blogs/big-data/best-practices-for-successfully-managing-memory-for-apache-spark-applications-on-amazon-emr/
+spark.dynamicAllocation.enabled=false
+spark.executor.cores=5
+spark.executor.memory=45g
+spark.driver.memory=120g
+spark.driver.cores=5
+spark.executor.instances=16
+spark.default.parallelism=5000
